tcldir      = $(datadir)/covered/scripts
tcl_SCRIPTS = assert.tcl \
              balloon.tcl \
              banner.gif \
              cdd_view.tcl \
              clear.gif \
              comb.tcl \
              cov_create.tcl \
              cov_icon.gif \
              find.gif \
              fsm.tcl \
              gen_new.tcl \
              gen_rank.tcl \
              gen_report.tcl \
              help.tcl \
              help_wrapper.tcl \
              help_tbl.tcl \
              left_arrow.gif \
              main_view.tcl \
              memory.tcl \
              menu_create.tcl \
              preferences.tcl \
              process_file.tcl \
              right_arrow.gif \
              summary.tcl \
              toggle.tcl \
              verilog.tcl \
              viewer.tcl \
              wizard.tcl

cfgdir      = $(datadir)/covered
cfg_DATA    = .coveredrc
