tcldir   = $(datadir)/covered/scripts
tcl_DATA = assert.tcl \
           balloon.tcl \
           banner.gif \
           cdd_view.tcl \
           checked.gif \
           clear.gif \
           comb.tcl \
           cov_create.tcl \
           cov_icon.gif \
           exclude.tcl \
           find.gif \
           fsm.tcl \
           gen_new.tcl \
           gen_rank.tcl \
           gen_report.tcl \
           help.tcl \
           left_arrow.gif \
           main_view.tcl \
           memory.tcl \
           menu_create.tcl \
           preferences.tcl \
           process_file.tcl \
           right_arrow.gif \
           summary.tcl \
           toggle.tcl \
           unchecked.gif \
           verilog.tcl \
           viewer.tcl \
           windowlist.tcl \
           wizard.tcl

cfgdir   = $(datadir)/covered
cfg_DATA = .coveredrc
