docdir   = $(datadir)/covered/doc/gui
doc_DATA = comb.html \
           cov_bar.html \
           cov_view.html \
           file_menu.html \
           help_menu.html \
           info_bar.html \
           intro.html \
           line.html \
           main.html \
           main_menu.html \
           mod_inst_lb.html \
           preferences.html \
           report_menu.html \
           summary.html \
           summary_bar.html \
           toggle.html \
           view_menu.html \
           welcome.html

imgdir   = $(datadir)/covered/doc/gui/images
img_DATA = images/banner.gif \
           images/color.png \
           images/comb_complex.png \
           images/comb_event.png \
           images/comb_simple.png \
           images/comb_unary.png \
           images/dn_button.png \
           images/file_menu.png \
           images/help_menu.png \
           images/main_cov.png \
           images/main_info.png \
           images/main_lb.png \
           images/main_menu.png \
           images/main_summary.png \
           images/main_viewer.png \
           images/main_window.png \
           images/open_cdd.png \
           images/populated_lb.png \
           images/pref_window.png \
           images/report_menu.png \
           images/summary_window.png \
           images/toggle_full.png \
           images/up_button.png \
           images/view_menu.png
