docdir   = $(datadir)/covered/doc/gui
doc_DATA = assert.html \
           comb.html \
           cov_bar.html \
           cov_view.html \
           file_menu.html \
           fsm.html \
           help_menu.html \
           info_bar.html \
           intro.html \
           line.html \
           main.html \
           main_menu.html \
           mod_inst_lb.html \
           pref_color.html \
           pref_goals.html \
           pref_main.html \
           pref_report.html \
           pref_syntax.html \
           report_gen.html \
           report_menu.html \
           src_view.html \
           summary.html \
           summary_bar.html \
           toggle.html \
           view_menu.html \
           welcome.html

imgdir   = $(datadir)/covered/doc/gui/images
img_DATA = images/assert_excl.png \
           images/assert_window.png \
           images/assert_src.png \
           images/banner.gif \
           images/close_warn.png \
           images/color.png \
           images/comb_complex.png \
           images/comb_event.png \
           images/comb_simple_and.png \
           images/comb_simple_or.png \
           images/comb_simple.png \
           images/comb_unary.png \
           images/dn_button.png \
           images/exit_warn.png \
           images/file_menu.png \
           images/file_viewer.png \
           images/fsm_excl.png \
           images/fsm_window.png \
           images/gen_menu.png \
           images/help_menu.png \
           images/line_excl.png \
           images/line_incl.png \
           images/main_cov.png \
           images/main_info.png \
           images/main_lb.png \
           images/main_menu.png \
           images/main_summary.png \
           images/main_viewer.png \
           images/main_window.png \
           images/open_cdd.png \
           images/populated_lb.png \
           images/pref_main.png \
           images/pref_color.png \
           images/pref_goals.png \
           images/pref_syntax.png \
           images/pref_report.png \
           images/report_gen.png \
           images/report_menu.png \
           images/summary_window.png \
           images/toggle_full.png \
           images/up_button.png \
           images/view_menu.png
