docdir   = $(datadir)/covered/doc/gui
doc_DATA = assert.help \
           comb.help \
           cov_bar.help \
           cov_view.help \
           file_menu.help \
           fsm.help \
           help.help \
           help_menu.help \
           info_bar.help \
           intro.help \
           line.help \
           main.help \
           main_menu.help \
           memory.help \
           mod_inst_lb.help \
           pref_color.help \
           pref_goals.help \
           pref_main.help \
           pref_report.help \
           pref_syntax.help \
           report_gen.help \
           report_menu.help \
           src_view.help \
           summary.help \
           summary_bar.help \
           toggle.help \
           view_menu.help

imgdir   = $(datadir)/covered/doc/gui/images
img_DATA = images/assert_excl.gif \
           images/assert_window.gif \
           images/assert_src.gif \
           images/banner.gif \
           images/close_warn.gif \
           images/color.gif \
           images/comb_complex.gif \
           images/comb_event.gif \
           images/comb_simple_and.gif \
           images/comb_simple_or.gif \
           images/comb_simple.gif \
           images/comb_unary.gif \
           images/dn_button.gif \
           images/exit_warn.gif \
           images/file_menu.gif \
           images/file_viewer.gif \
           images/fsm_excl.gif \
           images/fsm_window.gif \
           images/gen_menu.gif \
           images/help_menu.gif \
           images/line_excl.gif \
           images/line_incl.gif \
           images/main_cov.gif \
           images/main_info.gif \
           images/main_lb.gif \
           images/main_menu.gif \
           images/main_summary.gif \
           images/main_viewer.gif \
           images/main_window.gif \
           images/memory_full.gif \
           images/open_cdd.gif \
           images/populated_lb.gif \
           images/pref_main.gif \
           images/pref_color.gif \
           images/pref_goals.gif \
           images/pref_syntax.gif \
           images/pref_report.gif \
           images/report_gen.gif \
           images/report_menu.gif \
           images/summary_window.gif \
           images/toggle_full.gif \
           images/up_button.gif \
           images/view_menu.gif
