## Process this file with automake to produce Makefile.in
man_MANS = covered.1
docdir   = $(datadir)/covered/doc/user
doc_DATA = 001.html \
           002.html \
           003.html \
           004.html \
           005.html \
           006.html \
           007.html \
           008.html \
           009.html \
           010.html \
           011.html \
           012.html \
           013.html \
           014.html \
           015.html \
           016.html \
           017.html \
           018.html \
           019.html \
           020.html \
           021.html \
           022.html \
           banner.gif \
           example.rptI.html \
           example.rptM.html \
           example.v.html \
           index.html \
           styles.css
