## Process this file with automake to produce Makefile.in
man_MANS = covered.1
docdir   = $(datadir)/covered/doc/user
doc_DATA = 001.html \
           002.html \
           003.html \
           004.html \
           005.html \
           006.html \
           007.html \
           008.html \
           009.html \
           010.html \
           011.html \
           012.html \
           013.html \
           014.html \
           015.html \
           016.html \
           017.html \
           018.html \
           019.html \
           020.html \
           021.html \
           022.html \
           023.html \
           024.html \
           025.html \
           026.html \
           027.html \
           028.html \
           029.html \
           030.html \
           banner.gif \
           test/example.rptI.html \
           test/example.rptM.html \
           test/example.v.html \
           index.html \
           styles.css

imgdir   = $(datadir)/covered/doc/user/img
img_DATA = img/000000.gif \
           img/12568c.gif \
           img/butprev.png \
           img/fsm_example.png \
           img/tile.jpeg \
           img/toolbar_cont.png \
           img/toolbar_first.png \
           img/toolbar_home.png \
           img/toolbar_last.png \
           img/toolbar_left.png \
           img/toolbar_next.png \
           img/toolbar_prev.png \
           img/toolbar_right.png \
           img/vhier.png
